--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -1,1 +1,310 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need), Exercises</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Quadratic Equations"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Introduction"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Solutions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Discriminant"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need), Exercises</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1 Quadratic Equations"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Polynomialdeg2.svg/300px-Polynomialdeg2.svg.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a21e6e4",
+   "metadata": {},
+   "source": [
+    "(_Image from the <u>[Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation)<u>_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38aecc2",
+   "metadata": {},
+   "source": [
+    "The general form of a quadratic equation is:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ed37bb",
+   "metadata": {},
+   "source": [
+    "$$ax^2 + bx + c = 0$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### Solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6050ae0e",
+   "metadata": {},
+   "source": [
+    "Provied $a \\ne 0$, we can use an elementary algebraic method called [<u>completing the square</u>](https://en.wikipedia.org/wiki/Completing_the_square) to show that a quadratic equation has the following solution:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b85dda9e",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x = \\dfrac{-b \\pm \\sqrt{b^2-4ac}}{2a}\n",
+    "$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### Discriminant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cc4a99f",
+   "metadata": {},
+   "source": [
+    "The quantity $\\Delta$ = $b^2 - 4ac$ is called the __discriminant__ of the equation and decides the nature of its solutions. The table below shows the various possibilities. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8efd014",
+   "metadata": {},
+   "source": [
+    "| Discriminant | Roots |\n",
+    "| :---: | :--- |\n",
+    "| $\\Delta$ = $b^2 - 4ac = 0$ | A single solution of $-b/(2a)$ |\n",
+    "| $\\Delta$ = $b^2 - 4ac > 0$ | Two distinct solutions |\n",
+    "| $\\Delta$ = $b^2 - 4ac < 0$ | No real solutions; both are complex. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a45102",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20b47d01",
+   "metadata": {},
+   "source": [
+    "1. What is a Git repository?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03427635",
+   "metadata": {},
+   "source": [
+    "Ans: A Git repository is a centralised data storage location "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3632b7fa",
+   "metadata": {},
+   "source": [
+    "2. Git keeps track of BLANK in the files in our repository.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b5217ea",
+   "metadata": {},
+   "source": [
+    "Ans: changes in the lines of codes "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a58ad14",
+   "metadata": {},
+   "source": [
+    "3. What is a commit?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2972c87f",
+   "metadata": {},
+   "source": [
+    "Ans: Commit is a way of saving changes made to the file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5523e23",
+   "metadata": {},
+   "source": [
+    "4. What is a push?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45fdadf1",
+   "metadata": {},
+   "source": [
+    "Ans: A push is a way of uploading the commit or saved work to a repository"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f56b073",
+   "metadata": {},
+   "source": [
+    "5. What is a pull?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a47112b",
+   "metadata": {},
+   "source": [
+    "Ans: A pull downloads and syncs the latest changes found in the repository to merge and update the local copy of the same file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b24ca9d2",
+   "metadata": {},
+   "source": [
+    "6. What is the difference between GitHub and GitHub Desktop?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853c1451",
+   "metadata": {},
+   "source": [
+    "Ans: GitHub is accessed via the web and it is the site where GitHub repositories are hosted. On the other hand, GitHub Desktop is an application installed locally that the user can interact with to perform commit, push, and pull commands without the need of a command prompt or terminal. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42a1ab6",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee98a76a",
+   "metadata": {},
+   "source": [
+    "__Exercise 3 (A Matter of Statistics)__ The mean ($\\mu$), standard deviation ($\\sigma$), and Pearson correlation coefficient ($r$) are important statistical parameters. Given variables $x_{i}$ and $y_{i}$ representing the $i$-th values in a dataset with $n$ pairs, use Markdown notation to write the equations for these parameters. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59d72c8f",
+   "metadata": {},
+   "source": [
+    "Your equations should ideally look like the following. You might find [<u>this resource</u>](https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf) from Rice University useful."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8030d1f",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mu = \\dfrac{1}{n}\\sum_{i=1}^{n}x_{i}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52082c7a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\sigma = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (x_{i} - \\mu)^2}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a830e7",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "r = \\dfrac{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})(y_{i} - \\mu_{y})}{\\sqrt{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})^2\\sum_{i=1}^{n}(y_{i} - \\mu_{Y})^2}}"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
