ready to review added $$ for using jupyter need

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -260,7 +260,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\sigma = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (x_{i} - \\mu)^2}"
+    "\\sigma = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (x_{i} - \\mu)^2}\n",
+    "$$"
    ]
   },
   {
@@ -269,7 +270,8 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "r = \\dfrac{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})(y_{i} - \\mu_{y})}{\\sqrt{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})^2\\sum_{i=1}^{n}(y_{i} - \\mu_{Y})^2}}"
+    "r = \\dfrac{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})(y_{i} - \\mu_{y})}{\\sqrt{\\sum_{i=1}^{n} (x_{i} - \\mu_{X})^2\\sum_{i=1}^{n}(y_{i} - \\mu_{Y})^2}}\n",
+    "$$"
    ]
   }
  ],
