READY TO REVIEW FUNDAMENTALS (GOOD) & (NEED) EXERCISES

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -1,1 +1,380 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f52b751",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa20c7df",
+   "metadata": {},
+   "source": [
+    "Example 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e31952fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('Please provide me with a number?')\n",
+    "print('You entered', user_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c347704",
+   "metadata": {},
+   "source": [
+    "Task 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "20301af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How you doin Joey !\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_input = input('What is your name?')\n",
+    "print('How you doin', name_input,'!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7f172ea",
+   "metadata": {},
+   "source": [
+    "Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3b9c661d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Jayden and I am 4 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_input = input('What is your name?')\n",
+    "age_input = input('What is your age?')\n",
+    "print('My name is',name_input,'and I am',age_input,'years old.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6517854",
+   "metadata": {},
+   "source": [
+    "Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7a5d6e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of pi to 2 decimal places is: 3.14\n",
+      "The value of pi to 3 decimal places is: 3.142\n",
+      "The value of pi to 4 decimal places is: 3.1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi_value = 3.141592653589793\n",
+    "print(f\"The value of pi to 2 decimal places is: {pi_value:.2f}\")\n",
+    "print(f\"The value of pi to 3 decimal places is: {pi_value:.3f}\")\n",
+    "print(f\"The value of pi to 4 decimal places is: {pi_value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4237adc",
+   "metadata": {},
+   "source": [
+    "Task 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f592e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple      $ 0.99\n",
+      "Banana     $ 0.59\n",
+      "Orange     $ 1.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "apple_price = 0.99\n",
+    "banana_price = 0.59\n",
+    "orange_price = 1.29\n",
+    "print(f\"{\"Apple\":10} ${apple_price:5}\")\n",
+    "print(f\"{\"Banana\":10} ${banana_price:5}\")\n",
+    "print(f\"{\"Orange\":10} ${orange_price:5}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb294c6",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad2efa3",
+   "metadata": {},
+   "source": [
+    "Write a Python program that takes a numerical grade (0-100) as input and outputs the corresponding letter grade based on the following criteria:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e88934b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's letter grade is: Fail\n"
+     ]
+    }
+   ],
+   "source": [
+    "grade_input = int(input(\"Enter the student's score\"))\n",
+    "\n",
+    "if grade_input >= 70 and grade_input <=100:\n",
+    "    print(\"The student's letter grade is: A\")\n",
+    "elif grade_input >= 50 and grade_input <=69:\n",
+    "    print(\"The student's letter grade is: B\")\n",
+    "elif grade_input >= 35 and grade_input <= 49:\n",
+    "    print(\"The student's letter grade is: C\")\n",
+    "elif grade_input >=0 and grade_input <=34:\n",
+    "    print(\"The student's letter grade is: Fail\")\n",
+    "else:\n",
+    "    print(\"There is an error! Please input a value between 0 to 100.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c1c1a0",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d8b5e7e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n > 0:\n",
+    "        return \"Invalid input\"\n",
+    "    elif n != 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result += number\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "print(factorial(5))   # Testing, expected output: 120\n",
+    "print(factorial(-1))  # Testing, expected output: Invalid input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ea09e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Invalid input\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n > 0:\n",
+    "        return \"Invalid input\"\n",
+    "    elif n < 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result += number\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "print(factorial(5))   # Testing, expected output: 120\n",
+    "print(factorial(-1))  # Testing, expected output: Invalid input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f406832a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "Invalid Input\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Invalid Input\"\n",
+    "    elif n > 0:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result *= number\n",
+    "        return result\n",
+    "\n",
+    "print(factorial(5))\n",
+    "print(factorial(-1))\n",
+    "print(factorial(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ee03ceba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "Invalid Input\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Invalid Input\"\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result *= number\n",
+    "        return result\n",
+    "\n",
+    "print(factorial(5))\n",
+    "print(factorial(-1))\n",
+    "print(factorial(0))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
