--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -1,1 +1,382 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Need) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Need) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61fe74db",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd9ea46",
+   "metadata": {},
+   "source": [
+    "- creating variables using '='\n",
+    "- checking if a variable is true or false using '=='\n",
+    "- using the math package to do calculations\n",
+    "- importing math and numpy packages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77c01ec",
+   "metadata": {},
+   "source": [
+    "- creating variables using '='\n",
+    "- checking if a variable is true or false using '=='\n",
+    "- using the math package to do calculations\n",
+    "- importing math and numpy packages\n",
+    "- _functions ends with '()' parantheses_\n",
+    "- _comments starts with '#'_\n",
+    "- _using 'if' and 'else' statements to make decisions\n",
+    "- _'[]' is used for lists of data_\n",
+    "- _'{}' is used for dictionary_\n",
+    "- _'()' is also used for math_\n",
+    "- _when calling a function such as 'sqrt()', a '.' is used between the desired package and the function_\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71bf15e8",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6e6edbb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "x, y = 3, 4\n",
+    "z = math.sqrt(x**2 + y**2)\n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0d3a0c1",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7708d4",
+   "metadata": {},
+   "source": [
+    "| # | Term | Description |\n",
+    "| :---: | :--- | :---: |\n",
+    "| 1 | Function | performs a task, with some belonging to a specific package |\n",
+    "| 2 | Arguments | the term the user inputs into the () of a function |\n",
+    "| 3 | Comments | a form of annotation that begins with a # that explains the purpose of the code |\n",
+    "| 4 | Indentations | define code blocks |\n",
+    "| 5 | Packages | a library of features that a user can import |\n",
+    "| 6 | . | indicates ownership and to call the function in a module or package |\n",
+    "| 7 | : | indicates the start of an indented code block | \n",
+    "| 8 | [ ] | used to store data as a list |\n",
+    "| 9 | [ [], [] ] | creates a nested list, a list within a list |\n",
+    "| 10 | {} | used to store data in a dictionary |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e89775",
+   "metadata": {},
+   "source": [
+    "## Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c17b94c6",
+   "metadata": {},
+   "source": [
+    "5/2 performs a division with output as a float in 1 decimal place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e90e6b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/2 # Division with output as a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fdf97eae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8/2 # Division with output in 1 decimal place"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb8a8de",
+   "metadata": {},
+   "source": [
+    "5//2 performs a division but only round down a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b3d96d96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2 # Performs division but only rounds down a float "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5fae64fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c1ccb038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7//2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08d037eb",
+   "metadata": {},
+   "source": [
+    "5%2 performs a division and ouputs a \"1\" if there is a remainder or decimal places, outputs a \"0\" if it is a whole number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "952c9039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5%2 # Expected answer is 2.5 but gets 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "42974fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10%2 # Expected answer is 5 but gets 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "829750a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3%2 # Odd/Even produces 1, 3/2 = 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "72d9dced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4%2 # Even/Even produces 0, 4/2 = 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cca1e4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4%3 # Even/Odd produces 1"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
