--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -1,1 +1,156 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8782f193",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78292899",
+   "metadata": {},
+   "source": [
+    "| Term | Brief Description |\n",
+    "| :-- | :--: |\n",
+    "| Subsetting | Selecting data often with a condition |\n",
+    "| Indexing | Accessing _one_ element based on its position with the first element being 0 indexed |\n",
+    "| Slicing | Accessing elemets with a range from start to stop (exclusive) and steps |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31125add",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "313b3361",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'C' 'E' 'G' 'I']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np_array_2d = np.array([[1, \"A\"], [3, \"C\"], [2, \"B\"], [4, \"D\"],\n",
+    "                        [5, \"E\"], [7, \"G\"], [6, \"F\"], [8, \"H\"],\n",
+    "                        [10, \"J\"], [9, \"I\"]])\n",
+    "\n",
+    "first_elements = np_array_2d[:,0] # access all rows, first column only\n",
+    "int_first_elements = first_elements.astype(int) # convert to integers\n",
+    "odd_numbers = int_first_elements % 2 # Even number = 0, odd number = 1\n",
+    "odd_numbers_check = odd_numbers == 1\n",
+    "\n",
+    "letters = (np_array_2d[:, 1])\n",
+    "odd_letters = letters[odd_numbers_check] # NumPy looks at letters array and check where odd_numbers_check is true\n",
+    "print(odd_letters)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ee1c58",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e5f24bc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  0  1 -1 -1]\n",
+      " [ 1 -1  1 -1 -1]\n",
+      " [ 1 -1 -1  1 -1]\n",
+      " [-1  1  1 -1 -1]\n",
+      " [ 1 -1  1 -1  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [[66, 50, 57, -1, -1],\n",
+    " [92, -1, 88, -1, -1],\n",
+    " [75, -1, -1, 76, -1],\n",
+    " [-1, 51, 87, -1, -1],\n",
+    " [71, -1, 67, -1, 69]]\n",
+    "\n",
+    "import numpy as np\n",
+    "np_data = np.array(data)\n",
+    "\n",
+    "# replacing values below 50 to -1\n",
+    "mask_1 = np_data < 50\n",
+    "np_data[mask_1] = -1\n",
+    "\n",
+    "# replacing values above 50 to +1\n",
+    "mask_2 = np_data > 50\n",
+    "np_data[mask_2] = +1\n",
+    "\n",
+    "# replacing values equal to 50 to 0\n",
+    "mask_3 = np_data == 50\n",
+    "np_data[mask_3] = 0\n",
+    "\n",
+    "print(np_data)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
