--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -1,1 +1,394 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca9ed3a5",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b8fa9c",
+   "metadata": {},
+   "source": [
+    "2 similarities between lists and arrays:\n",
+    "1. They are used to store data. | _Both lists and arrays preserves the order and sequence in the data._\n",
+    "2. Operations can be applied to both lists and arrays. | _Both lists and arrays uses zero-based indexing._\n",
+    "\n",
+    "2 differences between lists and arrays:\n",
+    "1. Arrays allows for element-wise operation while lists does not.\n",
+    "2. Arrays can only contain one type of data while lists allows for different type. | \n",
+    "_Python Lists can store a mixed type of data such as integers, strings in one list while Arrays only allows every element to be the same type._\n",
+    "\n",
+    "What is a dictionary?\n",
+    "- A dictionary is a method of storing data that contains a key and value. | _A dictionary is an unordered collection of key-value pairs, where keys is used to retrieve a specific value._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94eaa96e",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "501c3bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1\n",
+      "c3\n",
+      "e5\n",
+      "g7\n",
+      "i9\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [\"a1\", \"b2\", \"c3\", \"d4\", \"e5\", \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "print(py_list[0])\n",
+    "print(py_list[2])\n",
+    "print(py_list[4])\n",
+    "print(py_list[6])\n",
+    "print(py_list[8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8527224e",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "75a9b0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boron\n"
+     ]
+    }
+   ],
+   "source": [
+    "elements = ['Hydrogen',\n",
+    "            'Helium', 'Lithium',\n",
+    "            'Beryllium', 'Boron', 'Carbon',\n",
+    "            'Nitrogen', 'Oxygen',\n",
+    "            'Fluorine',\n",
+    "            'Neon']\n",
+    "print(elements[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "66a96645",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nitrogen\n"
+     ]
+    }
+   ],
+   "source": [
+    "elements = ['Hydrogen',\n",
+    "            'Helium', 'Lithium',\n",
+    "            'Beryllium', 'Boron', 'Carbon',\n",
+    "            'Nitrogen', 'Oxygen',\n",
+    "            'Fluorine',\n",
+    "            'Neon']\n",
+    "print(elements[-4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6de8bcce",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8dae19bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers=[45, 60, 1, 30, 96, 1, 96, 57, 16, 1,\n",
+    "        99, 62, 86, 43, 42, 60, 59, 1, 1, 35,\n",
+    "        83, 47, 34, 28, 68, 23, 22, 92, 1, 79,\n",
+    "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
+    "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b8c65cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np_numbers = np.array(numbers)\n",
+    "\n",
+    "number_one = np_numbers == 1\n",
+    "\n",
+    "print(sum(number_one))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12289ef3",
+   "metadata": {},
+   "source": [
+    "## Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28aabe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_1 = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+    "x_2 = [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59b7973d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.5\n",
+      "302.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Determine the means of x1 and x2\n",
+    "import numpy as np\n",
+    "\n",
+    "np_x_1 = np.array(x_1)\n",
+    "np_x_2 = np.array(x_2)\n",
+    "print(np.mean(np_x_1))\n",
+    "print(np.mean(np_x_2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7643ea3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.41990129534635\n",
+      "326.0893282522444\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine the standard deviations of x1 and x2\n",
+    "\n",
+    "print(np.std(np_x_1))\n",
+    "print(np.std(np_x_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffba7809",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "covariance = 11595.8333\n",
+      "r = 0.9871796626270701\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine the Pearson correlation coefficient r for the two datasets\n",
+    "x_1 = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+    "x_2 = [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n",
+    "np_x_1 = np.array(x_1)\n",
+    "np_x_2 = np.array(x_2)\n",
+    "\n",
+    "# Calculate mean\n",
+    "mean_x_1 = np.mean(np_x_1)\n",
+    "mean_x_2 = np.mean(np_x_2)\n",
+    "\n",
+    "# Covariance\n",
+    "cov = np.cov(np_x_1, np_x_2)\n",
+    "cov_2 = cov[0,1]\n",
+    "print(f\"covariance = {cov_2:.4f}\")\n",
+    "\n",
+    "# By default np.std uses ddof=0, thus changing to ddof=1 is needed\n",
+    "std_x_1 = np.std(np_x_1, ddof=1)\n",
+    "std_x_2 = np.std(np_x_2, ddof=1)\n",
+    "\n",
+    "r = cov_2 / (std_x_1 * std_x_2)\n",
+    "print(f\"r = {r}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fb26973e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.98717966]\n",
+      " [0.98717966 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare resuls to np.corrcoef()\n",
+    "\n",
+    "r = np.corrcoef(np_x_1, np_x_2)\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a4d7050e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r = 0.9871796626\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare resuls to np.corrcoef()\n",
+    "\n",
+    "matrix = np.corrcoef(np_x_1, np_x_2)\n",
+    "r = matrix[0, 1]\n",
+    "\n",
+    "print(f\"r = {r:.10f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "28dccada",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r = 0.9871796626\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare resuls to np.corrcoef()\n",
+    "\n",
+    "matrix = np.corrcoef(np_x_1, np_x_2)\n",
+    "r = matrix[1, 0]\n",
+    "\n",
+    "print(f\"r = {r:.10f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf7c6857",
+   "metadata": {},
+   "source": [
+    "When manually calculating the r value using covariance and standard deviation function, changing of the delta degree of freedom is needed in order for both function to have the same ddof value. Without changing the ddof value, the r value is > 1 which is invalid. When using np.corrcoef(), the output is a matrix which the r value is indexed at [1,0] and [0,1]. Similarly, when using np.cov(), the output is also in a matrix. Using np.corrcoef() is more efficient to calculate the r value."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
