--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -1,1 +1,196 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "0711e98c",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d10348",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "66051240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 9]\n",
+      "[1, 9, 25]\n",
+      "[1, 9, 25, 49]\n",
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd = []\n",
+    "for x in range(0,10):\n",
+    "    if x % 2 == 0:\n",
+    "        continue\n",
+    "\n",
+    "    odd.append(x**2)\n",
+    "    print(odd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b9dc7b",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a9d72f14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd = [ x**2 for x in range(0,10) if x % 2 == 1]\n",
+    "print(odd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300b8a8f",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8358994",
+   "metadata": {},
+   "source": [
+    "Using the list comprehension is faster than the for loop after running the %%timeit command as the for loop requires .append() every loop which uses more computaional resources. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79892443",
+   "metadata": {},
+   "source": [
+    "## Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a3496623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 1 is 95.0\n",
+      "Year 2 is 90.25\n",
+      "Year 3 is 85.7375\n",
+      "Year 4 is 81.45062499999999\n",
+      "Year 5 is 77.37809374999999\n",
+      "Year 6 is 73.50918906249998\n",
+      "Year 7 is 69.83372960937498\n",
+      "Year 8 is 66.34204312890623\n",
+      "Year 9 is 63.02494097246091\n",
+      "Year 10 is 59.87369392383786\n",
+      "Year 11 is 56.880009227645964\n",
+      "Year 12 is 54.03600876626366\n",
+      "Year 13 is 51.33420832795048\n"
+     ]
+    }
+   ],
+   "source": [
+    "units = 100\n",
+    "year = 0\n",
+    "\n",
+    "while units > 50:\n",
+    "    units *= 0.95\n",
+    "    year += 1\n",
+    "    if units <50:\n",
+    "        break\n",
+    "    print(f\"Year {year} is {units}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3801bdab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From 2015 to 2016, CO2 increased by 3.4100.\n"
+     ]
+    }
+   ],
+   "source": [
+    "co2_data = [\n",
+    "    (2000, 369.55), (2001, 371.14), (2002, 373.28), \n",
+    "    (2003, 375.80), (2004, 377.52), (2005, 379.80), \n",
+    "    (2006, 381.90), (2007, 383.79), (2008, 385.60), \n",
+    "    (2009, 387.43), (2010, 389.90), (2011, 391.65), \n",
+    "    (2012, 393.85), (2013, 396.52), (2014, 398.65),\n",
+    "    (2015, 400.83), (2016, 404.24), (2017, 406.55), \n",
+    "    (2018, 408.52), (2019, 411.44), (2020, 414.24)\n",
+    "]\n",
+    "\n",
+    "prev_co2 = co2_data[0][1]\n",
+    "prev_year = co2_data[0][0]\n",
+    "\n",
+    "for year, co2 in co2_data:\n",
+    "    diff_co2 = co2 - prev_co2\n",
+    "    diff_year = year - prev_year\n",
+    "    if diff_co2 >= 3 and diff_year == 1:\n",
+    "        print(f\"From {prev_year} to {year}, CO2 increased by {diff_co2:.4f}.\")\n",
+    "    \n",
+    "    prev_co2 = co2\n",
+    "    prev_year = year"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
