--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -1,1 +1,221 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "377b0f9a",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8c3b3678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 degree C is 32.0 degree F\n",
+      "5 degree C is 41.0 degree F\n",
+      "10 degree C is 50.0 degree F\n",
+      "15 degree C is 59.0 degree F\n",
+      "20 degree C is 68.0 degree F\n",
+      "25 degree C is 77.0 degree F\n",
+      "30 degree C is 86.0 degree F\n",
+      "35 degree C is 95.0 degree F\n",
+      "40 degree C is 104.0 degree F\n",
+      "45 degree C is 113.0 degree F\n",
+      "50 degree C is 122.0 degree F\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_celsius = [\n",
+    "    0, 5, 10, 15, 20, 25,\n",
+    "    30, 35, 40, 45, 50]\n",
+    "\n",
+    "temperature_farenheit = [(c* 9/5) + 32 for c in temperatures_celsius]\n",
+    "\n",
+    "for celsisus, farenheit in zip(temperatures_celsius, temperature_farenheit):\n",
+    "    print(f\"{celsisus} degree C is {farenheit} degree F\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f10d7f",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "aca3b6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A1\tA2\tA3\t\n",
+      "\n",
+      "B1\tB2\tB3\t\n",
+      "\n",
+      "C1\tC2\tC3\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letter in ['A', 'B', 'C']:\n",
+    "    for number in [1, 2, 3]:\n",
+    "        print(f'{letter}{number}', end='\\t')\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "10a35080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:\t1\t2\t3\t4\t5\t\n",
+      "\n",
+      "2:\t2\t4\t6\t8\t10\t\n",
+      "\n",
+      "3:\t3\t6\t9\t12\t15\t\n",
+      "\n",
+      "4:\t4\t8\t12\t16\t20\t\n",
+      "\n",
+      "5:\t5\t10\t15\t20\t25\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in [1, 2, 3, 4, 5]:\n",
+    "    print(f\"{row}:\", end='\\t')\n",
+    "    for column in [1, 2, 3, 4, 5]:\n",
+    "        product = row * column\n",
+    "        print(f\"{product}\", end = '\\t')\n",
+    "    print('\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daab501d",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bc6704a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.88990489, 0.81819617, 0.60227988, 0.97408665, 0.97307812,\n",
+       "       0.97960211, 0.93594916, 0.80810306, 0.36518475, 0.25526316])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.rand(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "604e9add",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment 1: No. of Heads = 6\n",
+      "Experiment 2: No. of Heads = 7\n",
+      "Experiment 3: No. of Heads = 5\n",
+      "Experiment 4: No. of Heads = 4\n",
+      "Experiment 5: No. of Heads = 4\n",
+      "Experiment 6: No. of Heads = 8\n",
+      "Experiment 7: No. of Heads = 4\n",
+      "Experiment 8: No. of Heads = 4\n",
+      "Experiment 9: No. of Heads = 5\n",
+      "Experiment 10: No. of Heads = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "for index in range(1, 11):\n",
+    "    experiment = [np.random.rand(10)]\n",
+    "    for heads in experiment:\n",
+    "        count = np.sum(heads > 0.5)\n",
+    "    print(f\"Experiment {index}: No. of Heads = {count}\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
