--- a/4.1_loops/loops_(need).ipynb
+++ b/4.1_loops/loops_(need).ipynb
@@ -1,1 +1,590 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 The for iterator"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 for with a list"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 for with enumerate"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.3 for with range"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 while"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 1 The for iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4cd54c9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "569e1d01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n",
+      "Tony Stark is a Marvel superhero!\n",
+      "Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A poor way of printing a message corresponding to every sueprhero in the list\n",
+    "\n",
+    "name = real_names[0]\n",
+    "print(f\"{name} is a Marvel superhero!\")\n",
+    "\n",
+    "name = real_names[1]\n",
+    "print(f\"{name} is a Marvel superhero!\")\n",
+    "\n",
+    "name = real_names[2]\n",
+    "print(f\"{name} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.1 for with a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "93211b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n",
+      "Tony Stark is a Marvel superhero!\n",
+      "Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in real_names:\n",
+    "    print(f\"{name} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8dc3d23e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is a Marvel superhero!\n",
+      "Tony Stark is a Marvel superhero!\n",
+      "Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in real_names:\n",
+    "    print(f\"{x} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d613912c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square of 1 is 1\n",
+      "The square of 2 is 4\n",
+      "The square of 3 is 9\n",
+      "The square of 4 is 16\n",
+      "The square of 5 is 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for num in numbers:\n",
+    "    square = num ** 2\n",
+    "    print(f\"The square of {num} is {square}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "383a9cb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Hi ALICE\n",
+      "1\n",
+      "Hi BOB\n",
+      "2\n",
+      "Hi CHARLIE\n"
+     ]
+    }
+   ],
+   "source": [
+    "realnames = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "\n",
+    "for i in [0, 1, 2]:\n",
+    "    print(i)\n",
+    "    msg = f\"Hi {realnames[i].upper()}\"\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e1cc81a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi ALICE\n",
+      "Hi BOB\n",
+      "Hi CHARLIE\n"
+     ]
+    }
+   ],
+   "source": [
+    "realnames = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "\n",
+    "for i in range(len(realnames)):\n",
+    "    msg = f\"Hi {realnames[i].upper()}\"\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d0077cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Hi ALICE\n",
+      "1\n",
+      "Hi BOB\n",
+      "2\n",
+      "Hi CHARLIE\n",
+      "3\n",
+      "Hi DAN\n"
+     ]
+    }
+   ],
+   "source": [
+    "realnames = [\"Alice\", \"Bob\", \"Charlie\", \"Dan\"]\n",
+    "\n",
+    "for i in range(len(realnames)):\n",
+    "    print(i)\n",
+    "    msg = f\"Hi {realnames[i].upper()}\"\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.2 for with enumerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e70fd8f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0fee7bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Natasha Romanoff is a Marvel superhero!\n",
+      "1: Tony Stark is a Marvel superhero!\n",
+      "2: Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count, name in enumerate(real_names):\n",
+    "    print(f\"{count}: {name} is a Marvel superhero!\")\n",
+    "\n",
+    "# enumerate(real_names) returns pairs of (index, value) in this case (count, name) for each item in real_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "55668866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Black Widow!\n",
+      "Tony Stark is Iron Man!\n",
+      "Stephen Strange is Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, name in enumerate(real_names):\n",
+    "    superhero_name = super_names[index] # if we are at index 1(Tony Stark), it grabs index 1 from the superhero list (Iron Man)\n",
+    "    print(f\"{name} is {superhero_name}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8903e911",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student: Alice | Score: 85 | Result: Passed\n",
+      "Student: Bob | Score: 58 | Result: Failed\n",
+      "Student: Charlie | Score: 92 | Result: Passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Application: Student Grades\n",
+    "students = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "scores = [85, 58, 92]\n",
+    "\n",
+    "for index, name in enumerate(students):\n",
+    "    # Use the index to grab the corresponding score\n",
+    "    score = scores[index]\n",
+    "\n",
+    "    # Determine status\n",
+    "    status = \"Passed\" if score >= 60 else \"Failed\"\n",
+    "\n",
+    "    print(f\"Student: {name} | Score: {score} | Result: {status}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b839ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Structure\n",
+    "# The Loop: for index, item in enumerate(list_a):\n",
+    "#   index: the counter (starts at 0)\n",
+    "#   item: the actual data from list_a\n",
+    "# The Lookup: other_data = list_b[index]\n",
+    "#   This reaches into the second list at the exact same position the loop is currently at in the first list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6ee0e9ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100: Natasha Romanoff is a Marvel superhero!\n",
+      "101: Tony Stark is a Marvel superhero!\n",
+      "102: Stephen Strange is a Marvel superhero!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count, name in enumerate(real_names, 100):\n",
+    "    print(f\"{count}: {name} is a Marvel superhero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "75ed32cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Black Widow!\n",
+      "Tony Stark is Iron Man!\n",
+      "Stephen Strange is Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The Dictionary Approach\n",
+    "hero_registry = {\n",
+    "    \"Natasha Romanoff\": \"Black Widow\",\n",
+    "    \"Tony Stark\": \"Iron Man\",\n",
+    "    \"Stephen Strange\": \"Doctor Strange\"\n",
+    "}\n",
+    "\n",
+    "# We iterate through the dictionary items\n",
+    "for real_name, super_name in hero_registry.items():\n",
+    "    print(f\"{real_name} is {super_name}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.3 for with range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c80f9b51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b43221e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5,10): # 5 is the start value (inclusive) and 10 is the stop value (exclusive)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d25507e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 10, 3): # 1 is the start value, while 10 is excluded but adds 3\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc0651e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(real_names)):\n",
+    "    real_name = real_names[i]\n",
+    "    super_name = super_names[i]\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")\n",
+    "\n",
+    "# len(real_names): counts how many items are in the list\n",
+    "# range(3): creates a sequence of numbers - 0, 1, 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 2 while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830d5013",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 0\n",
+    "\n",
+    "while number < 5:\n",
+    "    print(number)\n",
+    "    number += 1\n",
+    "\n",
+    "# number = 0 is the initialization\n",
+    "# while number < 5: is the condition\n",
+    "# number += 1 is the increment. Without this line, the number would stay 0 forever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d1857e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "power_level = 10\n",
+    "goal = 50\n",
+    "\n",
+    "while power_level < goal:\n",
+    "    power_level += 10\n",
+    "    if power_level == 30:\n",
+    "        break\n",
+    "    print(power_level)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
