--- a/4.1_loops/loops_(good).ipynb
+++ b/4.1_loops/loops_(good).ipynb
@@ -1,1 +1,668 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Interrupting the flow"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 List comprehension!"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.1 Basic syntax"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.2 List comprehension with conditions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Other useful stuff"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.1 for with unpacking"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.2 for with zip()"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.3 for with dictionaries"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 1 Interrupting the flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "06ad878c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 10\n",
+      "2 100\n",
+      "3 1000\n",
+      "4 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for power in range(5):\n",
+    "    number = 10**power\n",
+    "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "847aaedb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 10\n",
+      "2 100\n",
+      "3 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for power in range(5):\n",
+    "    number = 10**power\n",
+    "    if number > 5000:\n",
+    "        break\n",
+    "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e815def",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 10\n",
+      "2 100\n",
+      "4 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for power in range(5):\n",
+    "    if power == 3:  # where power is equal to 3, it tells Python: Stop what you are doing in this round and jump immediately back to the top for the next number\n",
+    "        continue    # any code written after the continue block is ignored for that specific round\n",
+    "    number = 10**power\n",
+    "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "580a8e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    if number % 2 == 0: # this checks if the number is EVEN\n",
+    "        continue    # stops the current iteration and jumps back to the top of the loop\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "183cf39d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 0 # create a variable and assign it the value \"0\"\n",
+    "\n",
+    "while True: # infinite loop: a \"while loop\" runs as long as its condition is \"True\"\n",
+    "    print(number)\n",
+    "    number += 1 # shorthand for number = number + 1\n",
+    "    if number > 4: break # the exit condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3471982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# more concise version of the \"while loop\"\n",
+    "number = 0\n",
+    "\n",
+    "while number <= 4:\n",
+    "    print(number) # print first\n",
+    "    number += 1 # increment second\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aa31ac8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# more concise version of the \"while loop\" (starting number is different as the print is below)\n",
+    "number = 0\n",
+    "\n",
+    "while number <= 4:\n",
+    "    number += 1 # increment first\n",
+    "    print(number) # print second\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d998ead",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access Denied. Try again.\n",
+      "Access Granted!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# User Input Validation (Common Use Case for while loop)\n",
+    "password = \"\"\n",
+    "\n",
+    "while password != \"secret123\": # this means: keep running as long as the password is NOT equal to 'secret123'. If user types 'secret123', the condition becomes FALSE, and the loop exists\n",
+    "    password = input(\"Enter your password: \")\n",
+    "    if password != \"secret123\":\n",
+    "        print(\"Access Denied. Try again.\")\n",
+    "        \n",
+    "print(\"Access Granted!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 2 List comprehension!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 2.1 Basic syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ec2d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number for number in range(5)]\n",
+    "# creating a list containing 0 to 4\n",
+    "# expression \"number\": is the output\n",
+    "# expression \"for number\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4cff5e08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number**2 for number in range(5)]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 2.2 List comprehension with conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e894bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the LONG WAY\n",
+    "even_numbers = []\n",
+    "for number in range(10):\n",
+    "    if number % 2 == 0:\n",
+    "        even_numbers.append(number) # append() is to add a single item to the very end of an existing list\n",
+    "print(even_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dc297f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the LIST COMPREHENSION WAY\n",
+    "[number for number in range(10) if number % 2 == 0]\n",
+    "\n",
+    "# plain english: create a list of every number from 0 to 9, but only if that number is even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa36ffcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 20, 40, 60, 80]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number*10 for number in range(10) if number % 2 == 0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "85ccda6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32.0, 50.0, 68.0, 86.0, 104.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Transformation (Mapping)\n",
+    "celsius_temps = [0, 10, 20 , 30, 40]\n",
+    "\n",
+    "# Convert C to F: (C * 9/5) + 32\n",
+    "farenheit_temps = [(temp * 9/5) + 32 for temp in celsius_temps] \n",
+    "\n",
+    "print(farenheit_temps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "38a1238f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Bob', 'Charlie', 'Dave']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String Cleaning & Formatting\n",
+    "\n",
+    "raw_users = [\"  alice \", \"BOB\", \" charLIE  \", \"dave\"]\n",
+    "\n",
+    "# Strip whitespace and capitalize the first letter\n",
+    "\n",
+    "clean_users = [user.strip().capitalize() for user in raw_users]\n",
+    "\n",
+    "print(clean_users)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 3 Other useful stuff"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.1 for with unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7ca64b11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 1, y = 2, z = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z = [1, 2, 3]\n",
+    "print(f'x = {x}, y = {y}, z = {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5543f9c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use case: Swapping Variables\n",
+    "a = 10\n",
+    "b = 20\n",
+    "a, b = b, a # Now a is 20 and b is 10\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f17c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow\n",
+      "Tony Stark is Marvel's Iron Man\n",
+      "Stephen Strange is Marvel's Doctor Strange\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_superhero_info = [['Natasha Romanoff', 'Black Widow'], ['Tony Stark', 'Iron Man'], ['Stephen Strange', 'Doctor Strange']]\n",
+    "\n",
+    "for real_name, super_name in py_superhero_info:\n",
+    "    print(f\"{real_name} is Marvel's {super_name}\")\n",
+    "\n",
+    "# py_superhero_info is a nested list, each inner list represents 2 elements - a Real Name and Superhero Name\n",
+    "# for loop: assigns Natasha Romanoff to real_name and Black Widow to super_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "899135f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow\n",
+      "Tony Stark is Marvel's Iron Man\n",
+      "Stephen Strange is Marvel's Doctor Strange\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_superhero_info = [['Natasha Romanoff', 'Black Widow'], ['Tony Stark', 'Iron Man'], ['Stephen Strange', 'Doctor Strange']]\n",
+    "\n",
+    "for hero in py_superhero_info:\n",
+    "    print(f\"{hero[0]} is Marvel's {hero[1]}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.2 for with zip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "379d8056",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "for real_name, super_name in zip(real_names, super_names): # zip looks at index 0 of both lists and pairs them and so on.\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.3 for with dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a5698385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info = {\"Natasha Romanoff\": \"Black Widow\", \"Tony Stark\": \"Iron Man\", \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for key, value in superhero_info.items():\n",
+    "    print(f\"{key} is Marvel's {value}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5406a100",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in superhero_info.keys():\n",
+    "    value = superhero_info[key]\n",
+    "    print(f\"{key} is Marvel's {value}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
