READY FOR REVIEW USING_JUPYTER_(NEED) EXERCISE

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -137,7 +137,7 @@
    "id": "03427635",
    "metadata": {},
    "source": [
-    "Ans: A Git repository is a centralised data storage location "
+    "Ans: A Git repository is a storage location for project files that can be hosted either locally or remotely. It allows for version control to track changes through commits. Push and pull function allows you to sync with the remote repository. "
    ]
   },
   {
