READY FOR REVIEW STORING DATA_(GOOD) & STORING DATA_(NEED) EXERCISES

--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -26,7 +26,8 @@
     "| :-- | :--: |\n",
     "| Subsetting | Selecting data often with a condition |\n",
     "| Indexing | Accessing _one_ element based on its position with the first element being 0 indexed |\n",
-    "| Slicing | Accessing elemets with a range from start to stop (exclusive) and steps |"
+    "| Slicing | Accessing elemets with a range from start to stop (exclusive) and steps |\n",
+    "| Masking | Masking applies a condition to an array or list to produce True/False values (Boolean mask). You can then use this mask to filter elements that satisfy the condition. |"
    ]
   },
   {
