--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "66a96645",
    "metadata": {},
    "outputs": [
@@ -112,18 +112,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nitrogen\n"
+      "Boron\n"
      ]
     }
    ],
    "source": [
+    "#elements = ['Hydrogen',\n",
+    "#            'Helium', 'Lithium',\n",
+    "#            'Beryllium', 'Boron', 'Carbon',\n",
+    "#            'Nitrogen', 'Oxygen',\n",
+    "#            'Fluorine',\n",
+    "#            'Neon']\n",
+    "#print(elements[-4])\n",
+    "# output: Nitrogen\n",
+    "\n",
+    "# (Response to Comment)\n",
     "elements = ['Hydrogen',\n",
     "            'Helium', 'Lithium',\n",
     "            'Beryllium', 'Boron', 'Carbon',\n",
     "            'Nitrogen', 'Oxygen',\n",
     "            'Fluorine',\n",
     "            'Neon']\n",
-    "print(elements[-4])"
+    "print(elements[-6])"
    ]
   },
   {
